fix: Alineación de excepciones de dominio unificadas, remoción de manejadores globales excesivamente amplios que vulneraban el detalle de excepciones del JDK al exterior, y modernización de los recolectores de Stream mediante el estándar de inmutabilidad nativa de Java 21.